# umsl-cmp-sci-4500-project-snapshot-2019-05-01

./: .gitignore  .gitmodules  CMakeLists.txt
python/: .gitignore  setup.py
python/cozmonaut/: __main__.py
python/cozmonaut/operation/: __init__.py  friends_list.py  friends_remove.py
python/cozmonaut/operation/interact/: __init__.py  face_tracker.py
src/: global.c  global.h  log.c  log.h  log_fmt.cpp  main.c  service.c  service.h
src/service/: console.c  console.h  monitor.c  monitor.h  python.c  python.h
